# W65C02_Emulation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  a.out
SFML/doc/html/: classsf_1_1Font.html  classsf_1_1Ftp.html  classsf_1_1Http_1_1Response.html  classsf_1_1Packet.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Socket.html  classsf_1_1SoundBuffer.html  classsf_1_1Sprite.html  classsf_1_1Text.html  classsf_1_1Texture.html  classsf_1_1Transformable.html  classsf_1_1Window.html
SFML/include/SFML/Graphics/: Font.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp
SFML/include/SFML/Window/: Window.hpp
SystemBenchmark/: CMakeLists.txt  LoadRegisterBenchmarks.cpp
SystemLib/: Bus.cpp  Bus.h  CMakeLists.txt  Cycles.cpp  Cycles.h  EEPROM.cpp  EEPROM.h  LCD.cpp  LCD.h  Lights.cpp  Lights.h  PortBus.cpp  PortBus.h  RAM.cpp  RAM.h  System.cpp  System.h  W65C02.cpp  W65C02.h  W65C22.cpp  W65C22.h  W65C22S.cpp  W65C22S.h  _65C02.cpp  _65C02.h  a.out  emulation_load_register.txt  main.cpp  system_types.h  vrEmuLcd.cpp  vrEmuLcd.h
SystemTest/: 65C02_load_register.txt  ArithmeticOperationsTests.cpp  CMakeLists.txt  JumpsAndCallsTests.cpp  LoadRegisterTests.cpp  LoggingTests.cpp  LogicalOperationsTests.cpp  RegisterTransferTests.cpp  StackOperationsTests.cpp  StoreRegisterTests.cpp  a.out  emulation_load_register.txt  file_compare.h
SystemTest/65C02AssemblyFiles/: 65C02_arithmetic_operations.asm  65C02_compare.asm  65C02_increments_decrements.asm  65C02_jumps_and_calls.asm  65C02_load_register.asm  65C02_logical_operations.asm  65C02_shift_operations.asm  65C02_shifts.asm  65C02_stack_operations.asm  65C02_store_register.asm  65C02_subtraction.asm  65C02_transfer_register.asm
SystemTest/65C02LogFiles/: 65C02_arithmetic_operations.txt  65C02_compare.txt  65C02_load_register.txt  65C02_shift_operations.txt  65C02_stack_operations.txt
SystemTest/65C02OutFiles/: 65C02_addition.out  65C02_arithmetic_operations.out  65C02_increments_decrements.out  65C02_jumps_and_calls.out  65C02_load_register.out  65C02_logical_operations.out.out  65C02_shift_operations.out  65C02_shifts.out  65C02_stack_operations.out  65C02_store_register.out  65C02_transfer_register.out
SystemTest/ArduinoFiles/: 65C02_output_logger.ino
SystemTest/EmulationAssemblyFiles/: emulation_addition.asm  emulation_arithmetic_operations.asm  emulation_increments_decrements.asm  emulation_jumps_and_calls.asm  emulation_load_register.asm  emulation_logical_operations.asm  emulation_register_transfer.asm  emulation_shift_operations.asm  emulation_stack_operations.asm  emulation_store_register.asm
SystemTest/EmulationLogFiles/: emulation_addition.txt  emulation_arithmetic_operations.txt  emulation_increments_decrements.txt  emulation_jumps_and_calls.txt  emulation_logical_operations.txt  emulation_shifts.txt  emulation_store_register.txt  emulation_subtraction.txt  emulation_transfer_register.txt
SystemTest/EmulationOutFiles/: emulation_arithmetic_operations.out  emulation_compare.out  emulation_increments_decrements.out  emulation_jumps_and_calls.out  emulation_load_register.out  emulation_logical_operations.out  emulation_shift_operations.out  emulation_stack_operations.out  emulation_store_register.out  emulation_subtraction.out  emulation_transfer_register.out
VASM/: binary_to_decimal.asm  fibbonacci.asm  hello_world.asm  hello_world_inefficient.asm  inc.asm  interrupts.asm  vasm6502_oldstyle
